--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Nombre del Sitio de Noticias</h1>
+        <h1>Tecnologia del siglo XXI</h1>
     </header>
     <section class="banner">
         <h2>Bienvenido a nuestro sitio de noticias</h2>
