--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <h1>Tecnologia del siglo XXI</h1>
     </header>
     <section class="banner">
-        <h2>Bienvenido a nuestro sitio de noticias</h2>
-        <p>Las últimas noticias al alcance de tu mano</p>
+        <h2>Bienvenido a nuestro sitio de noticias de Tecnologias </h2>
+        <p>Las últimas noticias al alcance de tu mano y en tiempo real </p>
         <a href="#noticias" class="btn">Ver noticias</a>
     </section>
     <section id="noticias" class="noticias">
         <article>
-            <h3>Título de la noticia</h3>
+            <h3>Título de la noticia 1</h3>
             <p>Contenido de la noticia</p>
             <a href="#">Leer más</a>
         </article>
         <article>
-            <h3>Título de la noticia</h3>
+            <h3>Título de la noticia 2</h3>
             <p>Contenido de la noticia</p>
             <a href="#">Leer más</a>
         </article>
